clear dead devices
